--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,13 +7,13 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
+  - name: Experience
     url: '#posts'
     weight: 20
   - name: Projects
     url: '#projects'
     weight: 30
-  - name: Talks
+  - name: Blog
     url: '#talks'
     weight: 40
   - name: Publications
@@ -22,6 +22,9 @@ main:
   - name: Contact
     url: '#contact'
     weight: 60
+  - name: CV
+    url: uploads/resume.pdf
+    weight: 70
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
